inference/kimi-k2.6-nvfp4/bench_one_batch_1node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sglang-benchmark-batch-client-1node
  namespace: default
spec:
  nodeName: gke-ikwak-reliabilit-a4-highgpu-8g-a4-5e816978-m79c
  tolerations:
  - operator: "Exists"
    key: "nvidia.com/gpu"
  - operator: "Exists"
    key: "cloud.google.com/impending-node-termination"
  - operator: "Exists"
    key: "user-workload"
  restartPolicy: Never
  volumes:
  - name: workspace-volume
    emptyDir: {}
  - name: dshm
    emptyDir:
      medium: Memory
      sizeLimit: 10Gi
  - name: nvidia-install-dir-host
    hostPath:
      path: /home/kubernetes/bin/nvidia
  - name: hf-cache
    emptyDir: {}
  containers:
  - name: benchmark
    image: docker.io/lmsysorg/sglang:v0.5.10.post1
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        cpu: "8"
        memory: "32Gi"
      requests:
        cpu: "8"
        memory: "32Gi"
    volumeMounts:
    - name: workspace-volume
      mountPath: /workspace
    - name: dshm
      mountPath: /dev/shm
    - name: nvidia-install-dir-host
      mountPath: /usr/local/nvidia
    - name: hf-cache
      mountPath: /root/.cache/huggingface
    command:
    - /bin/bash
    - -c
    args:
    - |
      [...]
