inference/kimi-k2.6-nvfp4/sglang-kimi26-nvfp4-1node.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sglang-nvfp4-k26-1node
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distributed-sglang-nvfp4-k26
  serviceName: "sglang-serving-nvfp4-k26-1node"
  template:
    metadata:
      labels:
        app: distributed-sglang-nvfp4-k26
        llm-d.ai/guide: "optimized-baseline"
      annotations:
        networking.gke.io/default-interface: 'eth0'
        networking.gke.io/interfaces: |
          [
            {"interfaceName":"eth0","network":"default"},
            {"interfaceName":"eth2","network":"rdma-0"},
            {"interfaceName":"eth3","network":"rdma-1"},
            {"interfaceName":"eth4","network":"rdma-2"},
            {"interfaceName":"eth5","network":"rdma-3"},
            {"interfaceName":"eth6","network":"rdma-4"},
            {"interfaceName":"eth7","network":"rdma-5"},
            {"interfaceName":"eth8","network":"rdma-6"},
            {"interfaceName":"eth9","network":"rdma-7"}
          ]
    spec:
      serviceAccountName: sglang-sa
      containers:
      - name: sglang-container
        image: docker.io/lmsysorg/sglang:v0.5.10.post1
        imagePullPolicy: Always
        command:
        - /bin/bash
        - -c
        args:
        - |
          [...]
        resources:
          limits:
            nvidia.com/gpu: "8"
            cpu: "206"
            memory: "1500Gi"
          requests:
            nvidia.com/gpu: "8"
            cpu: "206"
            memory: "1500Gi"
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /root/.cache/huggingface
            name: hf-cache
          - name: nvidia-install-dir-host
            mountPath: /usr/local/nvidia
          - name: gib-nccl-plugin-volume
            mountPath: /usr/local/gib
        securityContext:
          privileged: true  
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-b200
      tolerations:
        - operator: "Exists"
          key: "nvidia.com/gpu"
        - operator: "Exists"
          key: "cloud.google.com/impending-node-termination"
        - operator: "Exists"
          key: "user-workload"
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 100Gi
        name: dshm
      - name: hf-cache
        hostPath:
          path: /mnt/stateful_partition/kube-ephemeral-ssd/huggingface_cache
          type: DirectoryOrCreate
      - name: nvidia-install-dir-host
        hostPath:
          path: /home/kubernetes/bin/nvidia
      - name: gib-nccl-plugin-volume
        emptyDir: {}
      - name: host-var-lib
        hostPath:
          path: /var/lib
---
apiVersion: v1
kind: Service
metadata:
  name: sglang-serving-nvfp4-k26-1node
  namespace: default
spec:
  type: NodePort
  selector:
    app: distributed-sglang-nvfp4-k26
  ports:
  - name: serving
    port: 8000
    targetPort: 8000
  - name: metrics
    port: 8080
    targetPort: 8080
